add text screen and hex only dfor debug output

--- a/yarc_reloaded/Makefile
+++ b/yarc_reloaded/Makefile
@@ -13,19 +13,14 @@ TJASS= lyxass
 RMAC= rmac
 RLN= rln
 
+DEBUG?= 1
+
 _68KFLAGS=-4 ~oall -i$(BJL_ROOT)
 TJFLAGS= -w -s
 
-ifdef NODRAW
-TJFLAGS+= -D NO_DRAW
-endif
-
-ifdef DEBUG
+ifeq ($(DEBUG),1)
 _68KFLAGS+= -DDEBUG
-endif
-
-ifdef SKUNK
-_68KFLAGS+= -DSKUNK
+TJFLAGS+= -D DEBUG
 endif
 
 .PRECIOUS: %.img %.bin
@@ -38,29 +33,27 @@ ALL: $(DEMO).j64
 
 OBL_START=1000
 
-obl0_50.img: obl0.S cube.equ canvas.h
+obl0_50.img: obl0.S canvas.h
 	$(Q)$(RMAC) -D_PAL $(_68KFLAGS) $< -o $@.o
 	$(RLN) -rw -z -n -a $(OBL_START) x x -o $@ $@.o
 	rm -f $@.o
 
-obl1_50.img: obl1.S cube.equ canvas.h
+obl1_50.img: obl1.S canvas.h
 	$(Q)$(RMAC) -D_PAL $(_68KFLAGS) $< -o $@.o
 	$(RLN) -rw -z -n -a $(OBL_START) x x -o $@ $@.o
 	rm -f $@.o
 
-obl0_60.img: obl0.S cube.equ canvas.h
+obl0_60.img: obl0.S canvas.h
 	$(Q)$(RMAC) $(_68KFLAGS) $< -o $@.o
 	$(RLN)  -rw -z -n -a $(OBL_START) x x -o $@ $@.o
 	rm -f $@.o
 
-obl1_60.img: obl1.S cube.equ canvas.h
+obl1_60.img: obl1.S canvas.h
 	$(Q)$(RMAC) $(_68KFLAGS) $< -o $@.o
 	$(RLN) -rw -z -n -a $(OBL_START) x x -o $@ $@.o
 	rm -f $@.o
 
 OBL=obl0_50.img obl1_50.img obl0_60.img obl1_60.img
-
-cube.o: cube.js hexscr.js
 
 %.do: %.das
 	$(RMAC) $(_68KFLAGS) $< -o $@
@@ -70,7 +63,11 @@ lsp_v15.bin: lsp_init.das
 %.bin : %.do
 	$(RLN) -z  -n -a 0 x x -o $@ $<
 
-cube_init.o cube_init.bin: cube.o $(OBL) lsp_v15.bin
+cube_init.o: cube_init.js $(OBL) lsp_v15.bin cube.js
+	$Qtouch cube.o
+	$(TJASS) $(TJFLAGS) -o $@ cube_init.js
+	$(TJASS) $(TJFLAGS) -o cube.o cube.js
+	$(TJASS) $(TJFLAGS) -o $@ cube_init.js
 
 %.bin : %.js
 	$(TJASS) -d $(TJFLAGS) -o $@ $<
@@ -78,22 +75,17 @@ cube_init.o cube_init.bin: cube.o $(OBL) lsp_v15.bin
 %.img: %.o
 	$(Q)$(RLN) -rw -z -n -a $(OBL_START) x x -o $@ $<
 
-%.equ %.o: %.js
-	$(TJASS) $(TJFLAGS) $<
-
-$(DEMO).equ $(DEMO).o : $(DEMO).js
-
-$(DEMO).j64: $(DEMO)_init.o sbl.XXX
+$(DEMO).j64: $(DEMO)_init.o $(DEMO).o sbl.XXX
 	$Qcp sbl.XXX $@
-	cat $< >> $@
+	cat $(DEMO)_init.o >> $@
 	bzcat $(BJL_ROOT)/bin/allff.bin.bz2 >>$@
-	truncate -s 256K $@
+	truncate -s 1M $@
 
-vj.j64: $(DEMO)_init.o sbl.XXX
+vj.j64: $(DEMO)_init.o  $(DEMO).o sbl.XXX
 	$Qcp sbl.XXX $@
-	cat $< >> $@
+	cat $(DEMO)_init.o >> $@
 	bzcat $(BJL_ROOT)/bin/allff.bin.bz2 >>$@
-	truncate -s 256K $@
+	truncate -s 1M $@
 
 include Rules.launch
 
@@ -103,4 +95,4 @@ clean:
 	$(Q)rm -f *.o
 	rm -f *.equ
 	rm -f *~
-	rm -f *.cof *.rom *.abs *.img *.bin *.do
+	rm -f *.j64 *.cof *.rom *.abs *.img *.bin *.do
