--- a/256/Outline2023/JaGol/Makefile
+++ b/256/Outline2023/JaGol/Makefile
@@ -92,7 +92,7 @@ vj.j64: $(DEMO_OUT).XXX
 	bzcat $(BJL_ROOT)/bin/allff.bin.bz2 >>$@
 	truncate -s 128K $@
 
-include ../Rules.launch
+include ../../Rules.launch
 
 .PHONY: clean
 clean:
