fix header comment, allow compile-time flags change

--- a/512/solidYARC512/Makefile
+++ b/512/solidYARC512/Makefile
@@ -25,7 +25,7 @@ RMAC= rmac
 RLN= rln
 
 _68KFLAGS=-4 ~oall -i$(BJL_ROOT)
-TJFLAGS= -w -d
+TJFLAGS+= -w -d
 
 ifeq ($(MODEL_M),1)
 PATCH_ADDRESS=4804
