--- a/512/JagRoto512/Makefile
+++ b/512/JagRoto512/Makefile
@@ -100,4 +100,4 @@ include ../Rules.launch
 
 .PHONY: clean
 clean:
-	$Qrm -f *.equ *.XXX *~ *.img *.bak *.cof *.o vj.j64 *.bin
+	$Qrm -f *.equ *.XXX *~ *.img *.bak *.cof *.o vj.j64
