--- a/64/pattern38/Makefile
+++ b/64/pattern38/Makefile
@@ -9,7 +9,14 @@ endif
 
 MODEL_M?=1
 
-all: $(DEMO).j64
+DEMO_EXT=
+ifneq ($(MODEL_M),1)
+DEMO_EXT=_K
+else
+DEMO_EXT=_M
+endif
+
+all: $(DEMO)$(DEMO_EXT).j64
 
 TJASS= lyxass
 
@@ -26,7 +33,7 @@ $(DEMO).XXX: $(DEMO).bin
 	$Qjagcrypt -q -u -tursi $<
 
 .ONESHELL:
-$(DEMO).j64: $(DEMO).XXX
+$(DEMO)$(DEMO_EXT).j64: $(DEMO).XXX
 	$Qcp $< $@
 	bzcat $(BJL_ROOT)/bin/allff.bin.bz2 >>$@
 	truncate -s 128K $@
